# vmod-cloudbucket

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  vmod.vcc
example/: default.vcl
src/: lib.rs
src/cloudbucket/aws/: mod.rs
tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc  test11.vtc  test12.vtc
